--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		
 		<div id="contact-first-container">
 			<div class="contact-picture-container">
-			<img src="web pictures/picture-1.jpg"
+			<img src="picture-1.jpg"
 			class="contact-picture">
 		</div>
 		<div class="contact-first-info">
@@ -148,11 +148,11 @@
 			</div>
 			<div class="link-button">
 				<a href="https://www.facebook.com/mj.faller.58" class="icon-text-style">
-					<img src="facebook-icon2.png" class="icons"></a>
+					<img src="facebook-icon.png" class="icons"></a>
 			</div>
 			<div class="link-button">
 				<a href="https://twitter.com/FallerMarj50372" class="icon-text-style">
-					<img src="twitter-icon.png"
+					<img src="twitter.png"
 					class="icons"></a>
 			</div>
 			<div class="link-button">
